<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="300dp">

  <Spinner
      android:id="@+id/planets_spinner"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"/>

  <Button
      android:id="@+id/ok_dialog"
      android:text="Ok"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="bottom|center"/>

</LinearLayout>